Align fix

--- a/_babaei.net/sass/custom/_styles.scss
+++ b/_babaei.net/sass/custom/_styles.scss
@@ -5,3 +5,24 @@
     text-align: justify;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    text-align: left;
+}
+
+.imgCenter {
+    display: block;
+    margin: 4px auto;
+    /*-webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    -ms-border-radius: 0;
+    -o-border-radius: 0;
+    border-radius: 0;
+    -webkit-box-shadow: rgba(0, 0, 0, 0) 0 0 0;
+    -moz-box-shadow: rgba(0, 0, 0, 0) 0 0 0;
+    box-shadow: rgba(0, 0, 0, 0) 0 0 0;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+    border: #000 0 none;*/
+}
+
