--- a/_babaei.net/sass/partials/sidebar/_base.scss
+++ b/_babaei.net/sass/partials/sidebar/_base.scss
@@ -104,3 +104,9 @@ aside.sidebar {
     }
   }
 }
+
+aside.sidebar {
+  p {
+    text-align: left;
+  }
+}
